implement test process

--- a/compute_FLOPs.ipynb
+++ b/compute_FLOPs.ipynb
@@ -224,6 +224,32 @@
     "print(f\"GFLOPs per episode   : {per_episode:.2f}\")\n",
     "print(f\"GFLOPs for {L} eps : {per_episode*L:.2f} \\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f2a10840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object Module.parameters at 0x000001CF5D0C6F80>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from agent.Ours_agent import MacLight\n",
+    "import torch\n",
+    "\n",
+    "ckpt = torch.load(\n",
+    "    \"ckpt/block_normal/Ours/42_Ours_win32.pt\",\n",
+    "    map_location='cpu',\n",
+    "    weights_only=False)       # legacy behaviour\n",
+    "print(ckpt['agent']['B1'].actor.parameters())\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
