calculate GFLOPS for attention

--- a/compute_FLOPs.ipynb
+++ b/compute_FLOPs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "8d6ccd75",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0ced5397",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -43,8 +50,7 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting torch_geometric\n",
-      "  Using cached torch_geometric-2.6.1-py3-none-any.whl.metadata (63 kB)\n",
+      "Requirement already satisfied: torch_geometric in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (2.6.1)\n",
       "Requirement already satisfied: aiohttp in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (3.9.3)\n",
       "Requirement already satisfied: fsspec in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (2023.10.0)\n",
       "Requirement already satisfied: jinja2 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (3.1.4)\n",
@@ -64,9 +70,7 @@
       "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from requests->torch_geometric) (2.0.12)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from requests->torch_geometric) (3.4)\n",
       "Requirement already satisfied: colorama in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from tqdm->torch_geometric) (0.4.6)\n",
-      "Using cached torch_geometric-2.6.1-py3-none-any.whl (1.1 MB)\n",
-      "Installing collected packages: torch_geometric\n",
-      "Successfully installed torch_geometric-2.6.1\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ee24d310",
    "metadata": {},
    "outputs": [
@@ -124,24 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "b5aaa285",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %% 2  – Load network definitions\n",
-    "from net.net import VAE, PolicyNet, ValueNet\n",
+    "from net.net import VAE, PolicyNet, ValueNet, Attention\n",
     "\n",
     "# Dimensions taken from original config\n",
     "STATE_DIM   = 33    \n",
-    "LATENT_DIM  = 10     \n",
+    "LATENT_DIM  = 10\n",
+    "GLOBAL_EMBED_DIM= 32     \n",
     "HIDDEN_DIM  = STATE_DIM * 2  \n",
     "ACTION_DIM  = 8        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c88e9383",
    "metadata": {},
    "outputs": [],
@@ -157,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "651a8ae3",
    "metadata": {},
    "outputs": [],
@@ -165,12 +170,13 @@
     "# %% 4  – Instantiate models\n",
     "vae   = VAE(STATE_DIM, LATENT_DIM)\n",
     "policy = PolicyNet(STATE_DIM, HIDDEN_DIM, ACTION_DIM)\n",
-    "value  = ValueNet(STATE_DIM, HIDDEN_DIM, LATENT_DIM)"
+    "value  = ValueNet(STATE_DIM, HIDDEN_DIM, LATENT_DIM)\n",
+    "attention=Attention(STATE_DIM,64,GLOBAL_EMBED_DIM)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2adf35a2",
    "metadata": {},
    "outputs": [
@@ -180,7 +186,8 @@
      "text": [
       "VAE                : 0.0178 GFLOPs | 0.81 M params\n",
       "PolicyNet          : 0.0000 GFLOPs | 0.01 M params\n",
-      "ValueNet           : 0.0000 GFLOPs | 0.01 M params\n"
+      "ValueNet           : 0.0000 GFLOPs | 0.01 M params\n",
+      "Attention          : 0.0004 GFLOPs | 0.01 M params\n"
      ]
     }
    ],
@@ -189,15 +196,17 @@
     "vae_g, vae_p = gflops_and_params(vae,   (STATE_DIM, 4, 4))\n",
     "pol_g, pol_p = gflops_and_params(policy, (STATE_DIM ,))\n",
     "val_g, val_p = gflops_and_params(value,  (STATE_DIM + LATENT_DIM,))\n",
+    "att_g, att_p = gflops_and_params(attention,(16,STATE_DIM))\n",
     "\n",
     "print(f\"VAE                : {vae_g:.4f} GFLOPs | {vae_p:.2f} M params\")\n",
     "print(f\"PolicyNet          : {pol_g:.4f} GFLOPs | {pol_p:.2f} M params\")\n",
-    "print(f\"ValueNet           : {val_g:.4f} GFLOPs | {val_p:.2f} M params\")"
+    "print(f\"ValueNet           : {val_g:.4f} GFLOPs | {val_p:.2f} M params\")\n",
+    "print(f\"Attention          : {att_g:.4f} GFLOPs | {att_p:.2f} M params\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "9b626f18",
    "metadata": {},
    "outputs": [
@@ -218,9 +227,35 @@
     "vae_tot    = 3 * vae_g * T\n",
     "actor_tot  = 3 * pol_g * T * K\n",
     "critic_tot = 3 * val_g * T * K * (1 + E)\n",
+    "att_tot    = 3 * att_g * T * (1 + E) *K\n",
     "\n",
     "per_episode = vae_tot + actor_tot + critic_tot\n",
     "print(f\"GFLOPs for VAE per episode  : {vae_tot: .2f}\")\n",
+    "print(f\"GFLOPs per episode   : {per_episode:.2f}\")\n",
+    "print(f\"GFLOPs for {L} eps : {per_episode*L:.2f} \\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2a24134c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GFLOPs for Attention per episode  :  152.99\n",
+      "GFLOPs per episode   : 159.22\n",
+      "GFLOPs for 80 eps : 12737.39 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute GFLOPS for algorithm with attention\n",
+    "per_episode = att_tot + actor_tot + critic_tot\n",
+    "print(f\"GFLOPs for Attention per episode  : {att_tot: .2f}\")\n",
     "print(f\"GFLOPs per episode   : {per_episode:.2f}\")\n",
     "print(f\"GFLOPs for {L} eps : {per_episode*L:.2f} \\n\")"
    ]
