--- a/compute_FLOPs.ipynb
+++ b/compute_FLOPs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "8d6ccd75",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "0ced5397",
    "metadata": {},
    "outputs": [
@@ -33,31 +33,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: torch_geometric in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (2.6.1)\n",
-      "Requirement already satisfied: aiohttp in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (3.10.11)\n",
-      "Requirement already satisfied: fsspec in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (2025.3.0)\n",
-      "Requirement already satisfied: jinja2 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (3.1.6)\n",
-      "Requirement already satisfied: numpy in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (1.24.4)\n",
-      "Requirement already satisfied: psutil>=5.8.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (7.0.0)\n",
-      "Requirement already satisfied: pyparsing in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (3.1.4)\n",
-      "Requirement already satisfied: requests in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (2.32.4)\n",
-      "Requirement already satisfied: tqdm in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from torch_geometric) (4.67.1)\n",
-      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from aiohttp->torch_geometric) (2.4.4)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from aiohttp->torch_geometric) (1.3.1)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from aiohttp->torch_geometric) (25.3.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from aiohttp->torch_geometric) (1.5.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from aiohttp->torch_geometric) (6.1.0)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.12.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from aiohttp->torch_geometric) (1.15.2)\n",
-      "Requirement already satisfied: async-timeout<6.0,>=4.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from aiohttp->torch_geometric) (5.0.1)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from jinja2->torch_geometric) (2.1.5)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from requests->torch_geometric) (3.4.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from requests->torch_geometric) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from requests->torch_geometric) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from requests->torch_geometric) (2025.4.26)\n",
-      "Requirement already satisfied: typing-extensions>=4.1.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from multidict<7.0,>=4.5->aiohttp->torch_geometric) (4.12.2)\n",
-      "Requirement already satisfied: propcache>=0.2.0 in /Users/wissem.yousfi/miniconda3/envs/maclight_env/lib/python3.8/site-packages (from yarl<2.0,>=1.12.0->aiohttp->torch_geometric) (0.2.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: torch_geometric in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (2.6.1)\n",
+      "Requirement already satisfied: aiohttp in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (3.9.3)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (2023.10.0)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (3.1.4)\n",
+      "Requirement already satisfied: numpy in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (1.26.4)\n",
+      "Requirement already satisfied: psutil>=5.8.0 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (7.0.0)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (3.2.3)\n",
+      "Requirement already satisfied: requests in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (2.27.1)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from torch_geometric) (4.66.2)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from aiohttp->torch_geometric) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from aiohttp->torch_geometric) (23.1.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from aiohttp->torch_geometric) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from aiohttp->torch_geometric) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from aiohttp->torch_geometric) (1.9.4)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from jinja2->torch_geometric) (2.1.5)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from requests->torch_geometric) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from requests->torch_geometric) (2023.7.22)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from requests->torch_geometric) (2.0.12)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from requests->torch_geometric) (3.4)\n",
+      "Requirement already satisfied: colorama in c:\\users\\yousf\\appdata\\roaming\\python\\python311\\site-packages (from tqdm->torch_geometric) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -69,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "ee24d310",
    "metadata": {},
    "outputs": [
@@ -77,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "▶ Using repo at: /Users/wissem.yousfi/Desktop/Work/Codes/MacLight\n",
+      "▶ Using repo at: c:\\Users\\yousf\\Bureau\\PFE_important\\Work\\Codes\\MacLight\n",
       "\n"
      ]
     }
@@ -106,36 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "b5aaa285",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Attention' from 'net.net' (/Users/wissem.yousfi/Desktop/Work/Codes/MacLight/net/net.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# %% 2  – Load network definitions\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnet\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnet\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m  PolicyNet, ValueNet, VAE, Attention\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Dimensions taken from original config\u001b[39;00m\n\u001b[1;32m      5\u001b[0m STATE_DIM   \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m33\u001b[39m    \n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Attention' from 'net.net' (/Users/wissem.yousfi/Desktop/Work/Codes/MacLight/net/net.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %% 2  – Load network definitions\n",
-    "from net.net import  PolicyNet, ValueNet, VAE, Attention\n",
+    "from net.net import VAE, PolicyNet, ValueNet, Attention\n",
     "\n",
     "# Dimensions taken from original config\n",
     "STATE_DIM   = 33    \n",
-    "LATENT_DIM  = 10     \n",
+    "LATENT_DIM  = 10    \n",
     "HIDDEN_DIM  = STATE_DIM * 2  \n",
     "ACTION_DIM  = 8        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "c88e9383",
    "metadata": {},
    "outputs": [],
@@ -151,22 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "651a8ae3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'VAE' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# %% 4  – Instantiate models\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m vae   \u001b[38;5;241m=\u001b[39m \u001b[43mVAE\u001b[49m(STATE_DIM, LATENT_DIM)\n\u001b[1;32m      3\u001b[0m policy \u001b[38;5;241m=\u001b[39m PolicyNet(STATE_DIM, HIDDEN_DIM, ACTION_DIM)\n\u001b[1;32m      4\u001b[0m value  \u001b[38;5;241m=\u001b[39m ValueNet(STATE_DIM, HIDDEN_DIM, LATENT_DIM)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'VAE' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %% 4  – Instantiate models\n",
     "vae   = VAE(STATE_DIM, LATENT_DIM)\n",
@@ -176,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "2adf35a2",
    "metadata": {},
    "outputs": [
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "9b626f18",
    "metadata": {},
    "outputs": [
@@ -212,8 +210,8 @@
      "output_type": "stream",
      "text": [
       "GFLOPs for VAE per episode  :  38.53\n",
-      "GFLOPs per episode   : 44.76\n",
-      "GFLOPs for 80 eps : 3580.92 \n",
+      "GFLOPs per episode   : 58.81\n",
+      "GFLOPs for 80 eps : 4704.73 \n",
       "\n"
      ]
     }
@@ -222,45 +220,58 @@
     "# %% 6  – Total GFLOPs per episode & full training run\n",
     "T, K, E, L = 720, 16, 10, 80\n",
     "vae_tot    = 3 * vae_g * T\n",
-    "actor_tot  = 3 * pol_g * T * K\n",
+    "actor_tot  = 3 * pol_g * T * K \n",
     "critic_tot = 3 * val_g * T * K * (1 + E)\n",
     "\n",
     "per_episode = vae_tot + actor_tot + critic_tot\n",
     "print(f\"GFLOPs for VAE per episode  : {vae_tot: .2f}\")\n",
     "print(f\"GFLOPs per episode   : {per_episode:.2f}\")\n",
-    "print(f\"GFLOPs for {L} eps : {per_episode*L:.2f} \\n\")"
+    "print(f\"GFLOPs for {L} eps : {per_episode*L:.2f} \\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "f2a10840",
+   "execution_count": 47,
+   "id": "0187c500",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object Module.parameters at 0x000001CF5D0C6F80>\n"
+      "Attention          : 0.0004 GFLOPS | 0.01 M params\n",
+      "PolicyNet          : 0.0000 GFLOPs | 0.01 M params\n",
+      "ValueNet           : 0.0001 GFLOPs | 0.03 M params\n",
+      "GFLOPs per episode   : 25.35\n"
      ]
     }
    ],
    "source": [
-    "from agent.Ours_agent import MacLight\n",
-    "import torch\n",
+    "# Calculate GFLOPS for the method with single head attention\n",
+    "from net.net import Attention\n",
+    "GLOBAL_EMBED_DIM=32\n",
+    "attention=Attention(32,64,32)\n",
+    "policy = PolicyNet(STATE_DIM, HIDDEN_DIM, ACTION_DIM)\n",
+    "value  = ValueNet(STATE_DIM,(STATE_DIM+GLOBAL_EMBED_DIM)*2, GLOBAL_EMBED_DIM)\n",
+    "pol_g, pol_p = gflops_and_params(policy, (STATE_DIM ,))\n",
+    "val_g, val_p = gflops_and_params(value,  (STATE_DIM + GLOBAL_EMBED_DIM,))\n",
+    "att_g, att_p =gflops_and_params(attention,(16,STATE_DIM,))\n",
+    "print(f\"Attention          : {att_g:.4f} GFLOPS | {att_p:.2f} M params\")\n",
+    "print(f\"PolicyNet          : {pol_g:.4f} GFLOPs | {pol_p:.2f} M params\")\n",
+    "print(f\"ValueNet           : {val_g:.4f} GFLOPs | {val_p:.2f} M params\")\n",
     "\n",
-    "ckpt = torch.load(\n",
-    "    \"ckpt/block_normal/Ours/42_Ours_win32.pt\",\n",
-    "    map_location='cpu',\n",
-    "    weights_only=False)       # legacy behaviour\n",
-    "print(ckpt['agent']['B1'].actor.parameters())\n",
-    "  "
+    "actor_att_tot  = 3 * pol_g * T * K * (1 + E)\n",
+    "critic_att_tot = 3 * val_g * T * K * (1 + E)\n",
+    "att_tot = 3 * att_g\n",
+    "\n",
+    "per_episode = att_tot + actor_att_tot + critic_att_tot\n",
+    "print(f\"GFLOPs per episode   : {per_episode:.2f}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "maclight_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
