fix errors in the resilience analysis notebook and change the order of seed and epi in test

--- a/reselience_analysis.ipynb
+++ b/reselience_analysis.ipynb
@@ -21,24 +21,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "79d7bd42",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === PATH TO YOUR RUN FILES (.npz) ===\n",
-    "PATH_PERT = \"\"     # run WITH perturbation\n",
-    "PATH_BASE = \"\"              # control run WITHOUT perturbation\n",
+    "PATH_PERT = \"ckpt/ff_block_normal_partial/Ours_GATv2_temporal_encoder/42_step_metrics.npz\"     # run WITH perturbation\n",
+    "PATH_BASE = \"ckpt/ff_block_normal_partial/Ours_GATv2_temporal_encoder/42_step_metrics.npz\"              # control run WITHOUT perturbation\n",
     "\n",
     "# time axis (must exist in BOTH files)\n",
     "TIME_KEY = \"t\"\n",
     "\n",
     "# Metric keys (one pair per performance metric you want to evaluate)\n",
     "KEYMAP = {\n",
-    "    \"speed\":  (\"avg_speed\", \"avg_speed\"),        # (pert_key, base_key)\n",
-    "    \"queue\":  (\"total_queue\", \"total_queue\"),\n",
-    "    \"wait\":   (\"total_wait\", \"total_wait\"),\n",
-    "    \"ret\": (\"avg_reward\", \"avg_reward\"),\n",
+    "    \"speed\":  (\"speed\", \"speed\"),        # (pert_key, base_key)\n",
+    "    \"queue\":  (\"queue\", \"queue\"),\n",
+    "    \"wait\":   (\"wait\", \"wait\"),\n",
+    "    \"reward\": (\"ret\", \"ret\"),\n",
     "}\n",
     "\n",
     "# Which metrics to evaluate in this run\n",
@@ -60,37 +60,39 @@
     "    \"reward\": True,   # often higher is better (if your reward is aligned that way)\n",
     "    \"queue\":  False,  # lower is better\n",
     "    \"wait\":   False,  # lower is better\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "EPISODE = 60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f3df3192",
    "metadata": {},
    "outputs": [],
    "source": [
     "def array_to_series(t: np.ndarray, x: np.ndarray) -> pd.Series:\n",
     "    \"\"\"Create a pandas Series indexed by time/step.\"\"\"\n",
-    "    if x.shape != t.shape:\n",
-    "        raise ValueError(f\"Shape mismatch: t{t.shape} vs x{x.shape}\")\n",
-    "    return pd.Series(x.astype(float), index=t.astype(float)).sort_index()"
+    "    return pd.Series(x, index=t).sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9aae6fcb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load files\n",
-    "pert = np.load(PATH_PERT)\n",
-    "base = np.load(PATH_BASE)\n",
-    "\n",
+    "pert = np.load(PATH_PERT,allow_pickle=True)\n",
+    "base = np.load(PATH_BASE,allow_pickle=True)\n",
+    "# Load the step log dict\n",
+    "pert = pert[\"step_log\"].item()\n",
+    "base = base[\"step_log\"].item()\n",
     "# Extract time axes\n",
-    "t_pert = pert[TIME_KEY]\n",
-    "t_base = base[TIME_KEY]\n",
+    "t_pert = pert[EPISODE][TIME_KEY]\n",
+    "t_base = base[EPISODE][TIME_KEY]\n",
     "\n",
     "# For convenience, build a dict of series per metric\n",
     "series_pert = {}\n",
@@ -98,18 +100,117 @@
     "\n",
     "for name in SELECTED:\n",
     "    k_pert, k_base = KEYMAP[name]\n",
-    "    x_pert = pert[k_pert]\n",
-    "    x_base = base[k_base]\n",
+    "    x_pert = pert[EPISODE][k_pert]\n",
+    "    x_base = base[EPISODE][k_base]\n",
     "    series_pert[name] = array_to_series(t_pert, x_pert)\n",
     "    series_base[name] = array_to_series(t_base, x_base)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "07c4fc3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>auc_ratio</th>\n",
+       "      <th>peak_loss</th>\n",
+       "      <th>t_peak</th>\n",
+       "      <th>rt_target</th>\n",
+       "      <th>recovery_slope</th>\n",
+       "      <th>residual_delta</th>\n",
+       "      <th>overshoot</th>\n",
+       "      <th>settling_time</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>metric</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>speed</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.002969</td>\n",
+       "      <td>-0.041115</td>\n",
+       "      <td>0.228894</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>queue</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>0.000432</td>\n",
+       "      <td>-0.078562</td>\n",
+       "      <td>0.100033</td>\n",
+       "      <td>1795.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wait</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>0.001030</td>\n",
+       "      <td>-0.082840</td>\n",
+       "      <td>0.169734</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        auc_ratio  peak_loss  t_peak  rt_target  recovery_slope  \\\n",
+       "metric                                                            \n",
+       "speed         1.0        0.0   600.0       30.0        0.002969   \n",
+       "queue         1.0        0.0   600.0      245.0        0.000432   \n",
+       "wait          1.0        0.0   600.0      170.0        0.001030   \n",
+       "\n",
+       "        residual_delta  overshoot  settling_time  \n",
+       "metric                                            \n",
+       "speed        -0.041115   0.228894            NaN  \n",
+       "queue        -0.078562   0.100033         1795.0  \n",
+       "wait         -0.082840   0.169734            NaN  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rows = []\n",
     "for name in SELECTED:\n",
@@ -141,13 +242,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "maclight_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
